# PhoenixKEY

./: .replit  BootForge-Linux-x64.spec  BootForge.spec  FEATURE_VERIFICATION.md  PROOF_OF_IMPLEMENTATION.txt  QUICK_START.txt  README.md  WINDOWS-README.txt  affirmations.prompt.yml  build_cross_platform.py  build_packages.py  create_recovery_usb.py  create_source_package.sh  macos-setup.sh  main.py  pyproject.toml  replit.md  requirements.txt  simple_pipeline_test.py  sitecustomize.py  test_critical_fixes.py  test_gui_features.py  test_oclp_pipeline.py  test_win_patch_engine.py  usb-installer.bat  usb-installer.sh  web_server.py  windows-setup.bat
.github/agents/: Soul-agent.agent.md  agenttopd  my-agent.agent.md
attached_assets/: Pasted-Explaining-the-patches-in-OpenCore-Legacy-Patcher-In-our-patcher-there-are-numerous-patches-used-t-1758634809308_1758634809308.txt  Pasted-PIC-OpenCore-Reference-Manual-1-0-6-2025-09-23-Copyright-2018-2025-vit9696-Contents-1-Introduct-1758635475423_1758635475424.txt  Pasted-PS-D-BootForgeOS-python-build-system-simple-build-py-Building-BootForge-executable-480-INFO--1759202867594_1759202867594.txt
bootable_usb/BootForge/: requirements.txt
build_system/: create_bootable_usb.py
configs/patches/: macos_universal.yaml
docs/: phoenix_key_legendary_blueprint.md
docs/phoenix_brand/: brand_guide.md
scripts/: install-linux.sh  install-macos-secure.sh  install-macos.sh  install-windows.ps1  security.sh
tests/: conftest.py  test_core.py  test_phoenix_docs_builder.py  test_sitecustomize.py  test_win_patch_engine.py
(+37 files in other folders)
