[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "colorama>=0.4.6",
    "cryptography>=45.0.7",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "pyinstaller>=6.15.0",
    "pyqt6>=6.9.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
]
